Construction of the application's HTML and CSS started. Creation of lists and fictional cards to serve as the basis for creating the CSS.

--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Kanban Application</title>
+    <title>Kanban Board</title>
     <link href="styles.css" rel="stylesheet" />
 </head>
 
 <body>
-    <h1>Kanban Application</h1>
+    <header class="pageHeader">
+        <h1>Kanban Board</h1>
+    </header>
+
+    <div id="listsContainer">
+        <div class="list">
+            <header class="listHeader">
+                <h2>IFNMG - Pending tasks</h2>
+            </header>
+            <div class="card">
+
+            </div>
+            <div class="card">
+
+            </div>
+
+            <button class="createNewCardButton">+ Create New Card</button>
+        </div>
+        
+        <div class="list">
+
+        </div>
+    </div>
 
     <script src="./bundle.js"></script>
 </body>
