Creating the modal of card details (not finished).

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link href="lists.css" rel="stylesheet" />
     <link href="cards.css" rel="stylesheet" />
     <link href="creationPanel.css" rel="stylesheet" />
+    <link href="cardDetails.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -20,6 +21,29 @@
             <button id="createNewListButton">
                 + Create New List
             </button>
+        </div>
+    </div>
+
+    <div id="cardDetailsModal">
+        <div class="modalContent">
+            <span class="closeModal">&times;</span>
+
+            <header class="modalHeader">
+                <h2></h2>
+                <p></p>
+            </header>
+
+            <div class="modalDescription">
+                <h3>Description</h3>
+                <p></p>
+            </div>
+
+            <div class="modalToDoList">
+                <h3>To Do List</h3>
+                <div class="toDoListContainer">
+
+                </div>
+            </div>
         </div>
     </div>
 
