Creating more resources for the modal of card details (not finished).

--- a/public/index.html
+++ b/public/index.html
@@ -40,9 +40,20 @@
 
             <div class="modalToDoList">
                 <h3>To Do List</h3>
+
                 <div class="toDoListContainer">
 
                 </div>
+
+                <button class="newToDoButton">+ Add New Item</button>
+                
+                <form class="newToDoForm">
+                    <input type="text" name="newToDoContent" 
+                        placeholder="To Do Item..."
+                        minlength="1" maxlength="40" />
+
+                    <button type="submit">Add</button>
+                </form>
             </div>
         </div>
     </div>
